<resources>
    <string name="app_name">Recipe Manager</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_mismatch">Passwords don\'t match</string>
    <string name="log_in">Log in</string>
    <string name="logging_in">Logging in</string>
    <string name="register">Register</string>
    <string name="registering">Registering</string>
    <string name="login_failed">Login failed</string>
    <string name="register_failed">Registration failed</string>
    <string name="recipes">Recipes</string>
    <string name="add_recipe">Add recipe</string>
    <string name="edit">Edit</string>
    <string name="log_out">Log out</string>
    <string name="recipe_name">Recipe name</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="view_recipe">View recipe</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="unsaved">You may have unsaved changes</string>
    <string name="empty_username_or_password">Username or password is empty</string>
    <string name="loading_recipe">Loading recipe</string>
    <string name="recipe_loading_failed">Failed to load recipe</string>
    <string name="recipe_creation_failed">Failed to create recipe</string>
    <string name="creating_recipe">Creating recipe</string>
    <string name="create_recipe">Create recipe</string>
    <string name="instruction">Instruction</string>
    <string name="ingredient">Ingredient</string>
    <string name="unit">Unit</string>
    <string name="amount">Amount</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Do you want to delete this recipe?</string>
    <string name="amount_empty">Amount is empty</string>
    <string name="unit_empty">Unit is empty</string>
    <string name="ingredient_empty">Ingredient is empty</string>
    <string name="instruction_empty">Instruction is empty</string>
    <string name="saving_recipe">Saving recipe</string>
    <string name="recipe_saved">Recipe saved</string>
    <string name="recipe_deleted">Recipe deleted</string>
    <string name="deleting_recipe">Deleting recipe</string>
    <string name="recipe_name_empty">Recipe name is empty</string>
    <string name="recipe_description">Recipe description</string>
</resources>
