<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:context=".activity.RecipeEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/recipe_name"
            android:ems="10"
            android:id="@+id/editTextRecipeName"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextRecipeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/recipe_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />

        <TextView
            android:text="@string/ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/recipe_view_header_font_size"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerViewIngredients">

        </androidx.recyclerview.widget.RecyclerView>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/add_ingredient" />

        <TextView
            android:text="@string/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/recipe_view_header_font_size"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerViewInstructions" />

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/add_instruction" />
    </LinearLayout>
</ScrollView>
