<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity"
        android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:title="@string/app_name"
                android:titleTextColor="?attr/colorOnPrimary"
                android:background="?attr/colorPrimary" />

        <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="fixed"
                android:background="?attr/colorPrimary"
                app:tabTextColor="?attr/colorOnPrimary"
                app:tabIndicatorColor="?attr/colorOnPrimary"
                app:tabRippleColor="?attr/colorOnPrimary"
                android:id="@+id/tabLayoutMain">

            <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginTab"
                    android:text="@string/log_in"
                    tools:visibility="visible" />

            <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/registerTab"
                    android:text="@string/register"
                    tools:visibility="visible" />
        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/viewPagerMain" />

</LinearLayout>
